--- a/style/home.css
+++ b/style/home.css
@@ -24,6 +24,38 @@
      color: white;
 }
 
+.section-heading {
+    max-width: 827px;
+    text-align: center;
+}
+
+.section-heading h2 {
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.section-heading p {
+    margin-bottom: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 30px;
+    color: #757575;
+}
+
+.about-info .info-card p {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+
+.about-info .info-card h4 {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 30px;
+}
+
 /* Main style */
 
 
@@ -35,8 +67,8 @@
 header {
     background-color: #FFF8F3;
     padding: 50px;
-    background: url(../images/developer.png),url(../images/header_bg.png),#FFF8F3;
-    background-position: top left, bottom right;
+    background: url(../images/developer.png),url(../images/header_bg.png), #FFF8F3;
+    background-position: top 38px left 23px, bottom right;
     background-repeat: no-repeat;
 }
 
@@ -99,4 +131,22 @@ nav .menu a {
 .banner-image {
     max-width: 585px;
     vertical-align: middle; /*this is used to remove the gap from the bottom of an image which is browsers default style*/
+}
+
+#about {
+    padding-top: 130px;
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about-container {
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 156px;
+}
+
+.about-info {
+    display: flex;
+    justify-content: space-around;
 }
