--- a/style/home.css
+++ b/style/home.css
@@ -73,7 +73,7 @@ header {
     background-color: #FFF8F3;
     padding: 50px;
     background: url(../images/developer.png),url(../images/header_bg.png), #FFF8F3;
-    background-position: top 38px left 23px, bottom right;
+    background-position: 23px 38px, bottom right;
     background-repeat: no-repeat;
 }
 
@@ -262,6 +262,55 @@ hr {
 #resume .item-center .btn {
     margin-top: 50px;
 }
+
+footer {
+    margin-top: 113px;
+    background-color: #fff8f3;
+}
+
+.footer-section {
+    display: flex;
+    padding-top: 130px;
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    gap: 117px;
+}
+
+.footer-section .social {
+    max-width: 562px;
+}
+
+.footer-section h2 {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+
+.footer-section .social p {
+    line-height: 28px;
+    font-size: 16px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+
+.icons {
+    max-width: 120px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form input[type="text"], input[type="email"], textarea {
+    width: 461px;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
+    color: #757575;
+}
+
+
 
 
 
